--- a/daticomuni.ipynb
+++ b/daticomuni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1f90148b-3c72-4143-b5d0-88a7485f7c5b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3460aee8-6014-4929-a393-8a11ed6f3db4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "03a2170a-31fc-4ed4-8f6b-8546da51c4c8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "67a10f6e-b01a-4446-91dc-1341ff754a57",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "afe08a01-ab1b-4a1b-84c9-fb0c060fcdb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'store://daticomuni/artifact/artifact/daticomuni:wysx3jt89u21acbm6kj9nw6'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "di = project.get_artifact('daticomuni')\n",
     "di.key"
@@ -57,10 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "a3ffcdcf-f88d-4d87-a641-c4bd506e1c47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting src/convert-all.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile \"src/convert-all.py\"\n",
     "\n",
@@ -133,15 +152,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": key},outputs={}, local_execution=False)"
+    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": key},outputs={}, local_execution=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "68af7a41-0d61-4ad4-887f-5e46160d99de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'store://daticomuni/artifact/artifact/daticomuni:wysx3jt89u21acbm6kj9nw6'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "di.key"
    ]
@@ -163,18 +193,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "015c113a-0b87-4d8f-9121-c95fe8d89288",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting src/convert-aziendali.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile \"src/convert-aziendali.py\"\n",
     "\n",
     "import pandas as pd\n",
+    "from os import path, makedirs\n",
+    "import zipfile\n",
     "import numpy as np\n",
-    "\n",
+    "        \n",
     "file_basepath = \"daticomuni\"\n",
     "\n",
     "def convert_aziendali(project, source_artifact):\n",
@@ -206,13 +246,13 @@
     "        df = pd.read_csv(source_url, encoding=\"windows-1251\", delimiter=\";\")\n",
     "        # df = pd.read_excel(input_data.get(), sheet_name=0, header=0, converters=converters[ds_name])\n",
     "        df.reset_index(drop=True, inplace=True)\n",
-    "         project.log_dataitem(ds_name, data=df, kind='table', index=False)        \n",
+    "        project.log_dataitem(ds_name, data=df, kind='table', index=False)        \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "665e282f-47b8-41a2-b730-7410323bfd23",
    "metadata": {},
    "outputs": [],
@@ -220,17 +260,17 @@
     "func_az = project.new_function(name=\"convert_aziendali\",\n",
     "                         kind=\"python\",\n",
     "                         python_version=\"PYTHON3_10\",\n",
-    "                         source={\"source\": \"src/convert-aziendali\", \"handler\": \"create_list\"})"
+    "                         source={\"source\": \"src/convert-aziendali.py\", \"handler\": \"convert_aziendali\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "fa9d4e4b-d562-4a01-85f0-8ae3e5d37cdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_convert_az = func_az.run(action=\"job\",inputs={},outputs={}, local_execution=False)"
+    "run_convert_az = func_az.run(action=\"job\", inputs={\"source_artifact\": di.key}, outputs={}, local_execution=False)"
    ]
   },
   {
