--- a/daticomuni.ipynb
+++ b/daticomuni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "1f90148b-3c72-4143-b5d0-88a7485f7c5b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3460aee8-6014-4929-a393-8a11ed6f3db4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "03a2170a-31fc-4ed4-8f6b-8546da51c4c8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "67a10f6e-b01a-4446-91dc-1341ff754a57",
    "metadata": {},
    "outputs": [],
@@ -46,21 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "afe08a01-ab1b-4a1b-84c9-fb0c060fcdb2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'store://daticomuni/artifact/artifact/daticomuni:wysx3jt89u21acbm6kj9nw6'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "di = project.get_artifact('daticomuni')\n",
     "di.key"
@@ -68,18 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a3ffcdcf-f88d-4d87-a641-c4bd506e1c47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting src/convert-all.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile \"src/convert-all.py\"\n",
     "\n",
@@ -152,26 +133,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": key},outputs={}, local_execution=True)"
+    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": key},outputs={}, local_execution=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "68af7a41-0d61-4ad4-887f-5e46160d99de",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'store://daticomuni/artifact/artifact/daticomuni:wysx3jt89u21acbm6kj9nw6'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "di.key"
    ]
@@ -193,20 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "015c113a-0b87-4d8f-9121-c95fe8d89288",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting src/convert-aziendali.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile \"src/convert-aziendali.py\"\n",
     "\n",
@@ -252,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "665e282f-47b8-41a2-b730-7410323bfd23",
    "metadata": {},
    "outputs": [],
@@ -265,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "fa9d4e4b-d562-4a01-85f0-8ae3e5d37cdf",
    "metadata": {},
    "outputs": [],
