--- a/daticomuni.ipynb
+++ b/daticomuni.ipynb
@@ -133,17 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": key},outputs={}, local_execution=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68af7a41-0d61-4ad4-887f-5e46160d99de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "di.key"
+    "run_convert_all = func_convert_all.run(action=\"job\",inputs={\"source_artifact\": di.key},outputs={}, local_execution=False)"
    ]
   },
   {
@@ -188,9 +178,9 @@
     "    except:\n",
     "        print(\"Error downloading data\")\n",
     "        \n",
-    "    for ds_name in [\"2024_06_25 PIANI AZIENDALI\", \"NuovaTassonomia\", \"T_NuovaTassonomia_DettaglioRev\"]:\n",
-    "        source_url = data_dir + '/' + ds_name + \".xlsx\"\n",
-    "        df = pd.read_csv(source_url, encoding=\"windows-1251\", delimiter=\";\")\n",
+    "    for ds_name in [\"PIANI_AZIENDALI\", \"NuovaTassonomia\", \"T_NuovaTassonomia_DettaglioRev\"]: \n",
+    "        source_url = data_dir + '/' + ds_name + \".csv\"\n",
+    "        df = pd.read_csv(source_url, encoding=\"windows-1251\", delimiter=\",\")\n",
     "        # df = pd.read_excel(input_data.get(), sheet_name=0, header=0, converters=converters[ds_name])\n",
     "        df.reset_index(drop=True, inplace=True)\n",
     "        project.log_dataitem(ds_name, data=df, kind='table', index=False)        \n",
@@ -233,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b690d1-3918-4ee2-b735-f082765165ba",
+   "id": "af973a7b-5a75-46e9-bacb-19d8859f9da9",
    "metadata": {},
    "outputs": [],
    "source": []
