--- a/daticomuni.ipynb
+++ b/daticomuni.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1f90148b-3c72-4143-b5d0-88a7485f7c5b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "3460aee8-6014-4929-a393-8a11ed6f3db4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "03a2170a-31fc-4ed4-8f6b-8546da51c4c8",
    "metadata": {},
    "outputs": [],
@@ -36,20 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "67a10f6e-b01a-4446-91dc-1341ff754a57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# di = project.new_artifact(name=\"daticomuni\",kind=\"artifact\", path='/daticomuni.zip')"
+    "# di = project.new_artifact(name=\"daticomuni\",kind=\"artifact\", path='csvs.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "afe08a01-ab1b-4a1b-84c9-fb0c060fcdb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'store://daticomuni/artifact/artifact/daticomuni:rkcx3n9lar90a5b1m7lvnjag'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "di = project.get_artifact('daticomuni')\n",
     "di.key"
@@ -57,10 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "a3ffcdcf-f88d-4d87-a641-c4bd506e1c47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting src/convert-all.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile \"src/convert-all.py\"\n",
     "\n",
@@ -115,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "6d3e04fd-d321-4d1b-b7e6-ab94fcf0d3af",
    "metadata": {},
    "outputs": [],
@@ -128,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "ed3c9001-7910-4f65-a6e8-70f67b72cfe8",
    "metadata": {},
    "outputs": [],
@@ -138,12 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "015c113a-0b87-4d8f-9121-c95fe8d89288",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting src/convert-aziendali.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile \"src/convert-aziendali.py\"\n",
     "\n",
@@ -189,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "665e282f-47b8-41a2-b730-7410323bfd23",
    "metadata": {},
    "outputs": [],
@@ -202,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "fa9d4e4b-d562-4a01-85f0-8ae3e5d37cdf",
    "metadata": {},
    "outputs": [],
@@ -212,10 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "95c24613-6b3d-4794-8638-d501046d5387",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RUNNING'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run_convert_az.refresh().status.state"
    ]
